Fix alignment of selection box

--- a/modules/SplitTwoColConflict/ext.TwoColConflict.Split.less
+++ b/modules/SplitTwoColConflict/ext.TwoColConflict.Split.less
@@ -47,7 +47,7 @@
 
 .mw-twocolconflict-split-row {
 	display: flex;
-	align-items: baseline;
+	align-items: flex-start;
 	margin: 10px 0;
 }
 
@@ -126,7 +126,8 @@
 
 .mw-twocolconflict-split-selection {
 	display: flex;
-	width: 64px;
+	margin-top: 10px;
+	width: 66px;
 
 	div {
 		flex: 1;
